# bean

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  SECURITY.md  SKILL.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
.mari/: config.json
bean/: __init__.py  chunks.py  cli.py  config.py  confluence.py  discord.py  embed.py  gdocs.py  github.py  graph.py  html.py  http.py  hubspot.py  index.py  jira.py  lancecat.py  localfiles.py  microsoft.py  notion.py  office.py  pdf.py  plugins.py  remote.py  rerank.py  salesforce.py  search.py  slack.py  sources.py  store.py  sync.py  workspace.py  zendesk.py
bean/connectors/: __init__.py  confluence.py  discord.py  gdocs.py  git.py  github.py  hubspot.py  jira.py  localfiles.py  microsoft.py  salesforce.py  slack.py  zendesk.py
bean/prototypes/: __init__.py  airtable.py  asana.py  axero.py  bitbucket.py  bookstack.py  braintrust.py  buckets.py  canvas.py  clickup.py  coda.py  discourse.py  document360.py  dropbox.py  drupal_wiki.py  egnyte.py  figma.py  fireflies.py  freshdesk.py  gitbook.py  gitlab.py  gmail.py  gong.py  google_site.py  gsheets.py  guru.py  highspot.py  imap.py  intercom.py  linear.py  loopio.py  mediawiki.py  obsidian.py  outline.py  productboard.py  readwise.py  registry.py  rss.py  servicenow.py  slab.py  (+7 more)
commands/: bean.md
dev/: release.py
dev/eval/: README.md  eval_embed.py  fixture.py  run_eval.py  scenarios.py
docs/: authoring-connectors.md  connector-template.py  connectors.md
docs/plans/: cloud-mode.md  connectors-spec.md
docs/superpowers/plans/: 2026-07-04-cloud-s3-storage-backend.md
docs/superpowers/specs/: 2026-07-04-cloud-s3-storage-backend-design.md
docs/superpowers/spikes/: 2026-07-04-lance-s3-findings.md
scripts/: bean.py  beanw.py  release.py
skills/bean/: SKILL.md
skills/bean-connector/: SKILL.md  template.py
skills/connect-confluence/: SKILL.md
skills/connect-discord/: SKILL.md
skills/connect-gdocs/: SKILL.md
skills/connect-github/: SKILL.md
skills/connect-hubspot/: SKILL.md
skills/connect-jira/: SKILL.md
skills/connect-microsoft/: SKILL.md
skills/connect-salesforce/: SKILL.md
skills/connect-slack/: SKILL.md
skills/connect-zendesk/: SKILL.md
tests/: smoke_s3.py  test_bean.py
